@@ -14,10 +14,10 @@ mhandler <- function(hander_data, config_input, mhander_funs = NULL, extra_param
 
 # two colum match
 mhander_fusions_left_match <- function(hander_data, config_input, extra_params = list(gene_5 = 1, left_gene = NULL, 
-  left_match = TRUE)) {
+  fusions_left_match_flag = TRUE)) {
   left_gene <- extra_params$left_gene
   gene_5 <- extra_params$gene_5
-  flag <- extra_params$left_match
+  flag <- extra_params$fusions_left_match_flag
   if (!is.null(flag) && !flag) {
     return(hander_data)
   }
@@ -30,10 +30,10 @@ mhander_fusions_left_match <- function(hander_data, config_input, extra_params =
 }
 
 mhander_fusions_right_match <- function(hander_data, config_input, extra_params = list(gene_3 = 2, right_gene = NULL, 
-  right_match = TRUE)) {
+  fusions_right_match_flag = TRUE)) {
   right_gene <- extra_params$right_gene
   gene_3 <- extra_params$gene_3
-  flag <- extra_params$right_match
+  flag <- extra_params$fusions_right_match_flag
   if (!is.null(flag) && !flag) {
     return(hander_data)
   }
@@ -46,11 +46,11 @@ mhander_fusions_right_match <- function(hander_data, config_input, extra_params 
 }
 
 mhander_fusions_any_match <- function(hander_data, config_input, extra_params = list(gene_5 = 1, gene_3 = 2, 
-  any_gene = NULL, any_match = TRUE)) {
+  any_gene = NULL, fusions_any_match_flag = TRUE)) {
   any_gene <- extra_params$any_gene
   gene_5 <- extra_params$gene_5
   gene_3 <- extra_params$gene_3
-  flag <- extra_params$any_match
+  flag <- extra_params$fusions_any_match_flag
   if (!is.null(flag) && !flag) {
     return(hander_data)
   }
@@ -64,10 +64,10 @@ mhander_fusions_any_match <- function(hander_data, config_input, extra_params = 
 }
 
 mhander_fusions_full_match <- function(hander_data, config_input, extra_params = list(gene_5 = 1, gene_3 = 2, 
-  left_gene = NULL, right_gene = NULL, full_match = TRUE)) {
+  left_gene = NULL, right_gene = NULL, fusions_full_match_flag = TRUE)) {
   left_gene <- extra_params$left_gene
   right_gene <- extra_params$right_gene
-  flag <- extra_params$full_match
+  flag <- extra_params$fusions_full_match_flag
   if (!is.null(flag) && !flag) {
     return(hander_data)
   }
@@ -83,12 +83,12 @@ mhander_fusions_full_match <- function(hander_data, config_input, extra_params =
 }
 
 mhander_fusions_anyfull_match <- function(hander_data, config_input, extra_params = list(gene_5 = 1, gene_3 = 2, 
-  left_gene = NULL, right_gene = NULL, anyfull_match = TRUE)) {
+  left_gene = NULL, right_gene = NULL, fusions_anyfull_match_flag = TRUE)) {
   left_gene <- extra_params$left_gene
   right_gene <- extra_params$right_gene
   gene_5 <- extra_params$gene_5
   gene_3 <- extra_params$gene_3
-  flag <- extra_params$anyfull_match
+  flag <- extra_params$fusions_anyfull_match_flag
   if (!is.null(flag) && !flag) {
     return(hander_data)
   }
