@@ -3,19 +3,19 @@ test_that("fusions_filter", {
   demo_file <- system.file("extdata", "demo/proteinpaint/fusions2pp_fusioncatcher.txt", package = "ngstk")
   input_data <- read.table(demo_file, sep = "\t", header = TRUE, stringsAsFactors = FALSE)
   
-  mhander_extra_params = list(gene_5 = 1, gene_3 = 2, any_gene = "TCF3", any_match = TRUE)
+  mhander_extra_params = list(gene_5 = 1, gene_3 = 2, any_gene = "TCF3", fusions_any_match_flag = TRUE)
   result_1 <- fusions_filter(input_data, mhander_extra_params = mhander_extra_params)
   
-  mhander_extra_params = list(gene_3 = 2, right_gene = "GYPA", right_match = TRUE)
+  mhander_extra_params = list(gene_3 = 2, right_gene = "GYPA", fusions_right_match_flag = TRUE)
   result_2 <- fusions_filter(input_data, mhander_extra_params = mhander_extra_params)
   
-  mhander_extra_params = list(gene_5 = 1, left_gene = "GYPA", left_match = TRUE)
+  mhander_extra_params = list(gene_5 = 1, left_gene = "GYPA", fusions_left_match_flag = TRUE)
   result_3 <- fusions_filter(input_data, mhander_extra_params = mhander_extra_params)
   
-  mhander_extra_params = list(gene_5 = 1, gene_3 = 2, left_gene = "GYPE", right_gene = "GYPA", full_match = TRUE)
+  mhander_extra_params = list(gene_5 = 1, gene_3 = 2, left_gene = "GYPE", right_gene = "GYPA", fusions_full_match_flag = TRUE)
   result_4 <- fusions_filter(input_data, mhander_extra_params = mhander_extra_params)
   
-  mhander_extra_params = list(gene_5 = 1, gene_3 = 2, left_gene = "GYPE", right_gene = "GYPA", anyfull_match = TRUE)
+  mhander_extra_params = list(gene_5 = 1, gene_3 = 2, left_gene = "GYPE", right_gene = "GYPA", fusions_anyfull_match_flag = TRUE)
   result_5 <- fusions_filter(input_data, mhander_extra_params = mhander_extra_params)
   
   expect_that(nrow(result_1), equals(5))
